added basic support

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -99,6 +99,7 @@
     <script src="../index.js"></script>
     <script src="../javascript/webcomponents/ace.js"></script>
     <script src="../javascript/webcomponents/katex.js"></script>
+    <script src="../javascript/webcomponents/oembed.js"></script>
 
     <script>
     if (process.env.NODE_ENV !== 'development') {
