updated build process to different targets

--- a/src/entry/app/index.html
+++ b/src/entry/app/index.html
@@ -20,14 +20,14 @@
 
     <script src="https://code.responsivevoice.org/responsivevoice.js?key=blVZszUw"></script>
 
-    <link rel="shortcut icon" sizes="192x192" href="./logo_192.png">
+    <link rel="shortcut icon" sizes="192x192" href="../../assets/logo_192.png">
 
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="application-name" content="Lia">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="LiaScript">
-    <meta name="msapplication-TileImage" content="./logo_192.png">
+    <meta name="msapplication-TileImage" content="../../assets/logo_192.png">
     <meta name="msapplication-TileColor" content="#0071c5">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="theme-color" content="#000000">
@@ -35,11 +35,11 @@
     <link rel="manifest" href="./manifest.webmanifest">
 
     <!-- Fonts -->
-    <link rel="stylesheet" href="../../vendor/roboto/roboto.css">
+    <link rel="stylesheet" href="../../../vendor/roboto/roboto.css">
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" href="./logo.png">
-    <link rel="icon" href="logo.png" type="image/png">
+    <link rel="apple-touch-icon" href="../../assets/logo.png">
+    <link rel="icon" href="../../assets/logo.png" type="image/png">
 
     <style>
     .lds-dual-ring {
@@ -68,8 +68,8 @@
     }
     </style>
 
-    <link rel="stylesheet" href="../scss/main.scss">
-    <link rel="stylesheet" href="../../node_modules/material-icons/iconfont/material-icons.scss">
+    <link rel="stylesheet" href="../../scss/main.scss">
+    <link rel="stylesheet" href="../../../node_modules/material-icons/iconfont/material-icons.scss">
   </head>
   <body>
     <noscript>
@@ -95,11 +95,11 @@
       </p>
     </div>
 
-    <script src="../index.js"></script>
-    <script src="../javascript/webcomponents/ace.js"></script>
-    <script src="../javascript/webcomponents/katex.js"></script>
-    <script src="../javascript/webcomponents/oembed.js"></script>
-    <script src="../javascript/webcomponents/echarts.js"></script>
+    <script src="./index.js"></script>
+    <script src="../../javascript/webcomponents/ace.js"></script>
+    <script src="../../javascript/webcomponents/katex.js"></script>
+    <script src="../../javascript/webcomponents/oembed.js"></script>
+    <script src="../../javascript/webcomponents/echarts.js"></script>
     <script>
     if (process.env.NODE_ENV !== 'development') {
       if ('serviceWorker' in navigator) {
