--- a/src/entry/base/index.html
+++ b/src/entry/base/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <script src="https://code.responsivevoice.org/responsivevoice.js?key=blVZszUw"></script>
+    <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
 
     <link rel="shortcut icon" sizes="192x192" href="../../assets/logo_192.png">
 
