added webcomponent for preview-lia

--- a/src/entry/base/index.html
+++ b/src/entry/base/index.html
@@ -64,5 +64,6 @@
     <script src="../../javascript/webcomponents/katex.js"></script>
     <script src="../../javascript/webcomponents/oembed.js"></script>
     <script src="../../javascript/webcomponents/echarts.js"></script>
+    <script src="../../javascript/webcomponents/preview-lia.js"></script>
   </body>
 </html>
