--- a/src/entry/scorm1.2/index.html
+++ b/src/entry/scorm1.2/index.html
@@ -87,5 +87,6 @@
     <script src="../../javascript/webcomponents/katex.js"></script>
     <script src="../../javascript/webcomponents/oembed.js"></script>
     <script src="../../javascript/webcomponents/echarts.js"></script>
+    <script src="../../javascript/webcomponents/preview-lia.js"></script>
   </body>
 </html>
