preview-link not ready

--- a/src/entry/base/index.html
+++ b/src/entry/base/index.html
@@ -65,5 +65,6 @@
     <script src="../../javascript/webcomponents/oembed.js"></script>
     <script src="../../javascript/webcomponents/echarts.js"></script>
     <script src="../../javascript/webcomponents/preview-lia.js"></script>
+    <script src="../../javascript/webcomponents/preview-link.js"></script>
   </body>
 </html>
