--- a/src/entry/app/index.html
+++ b/src/entry/app/index.html
@@ -101,6 +101,7 @@
     <script src="../../javascript/webcomponents/oembed.js"></script>
     <script src="../../javascript/webcomponents/echarts.js"></script>
     <script src="../../javascript/webcomponents/preview-lia.js"></script>
+    <script src="../../javascript/webcomponents/preview-link.js"></script>
     <script>
     if (process.env.NODE_ENV !== 'development') {
       if ('serviceWorker' in navigator) {
