added format support for numbers and date

--- a/src/entry/app/index.html
+++ b/src/entry/app/index.html
@@ -91,6 +91,8 @@
     <script src="../../javascript/webcomponents/echarts.js"></script>
     <script src="../../javascript/webcomponents/preview-lia.js"></script>
     <script src="../../javascript/webcomponents/preview-link.js"></script>
+    <script src="../../javascript/webcomponents/intl-number.js"></script>
+    <script src="../../javascript/webcomponents/intl-datetime.js"></script>
     <script>
     if (process.env.NODE_ENV !== 'development') {
       if ('serviceWorker' in navigator) {
