--- a/src/entry/base/index.html
+++ b/src/entry/base/index.html
@@ -66,5 +66,7 @@
     <script src="../../javascript/webcomponents/echarts.js"></script>
     <script src="../../javascript/webcomponents/preview-lia.js"></script>
     <script src="../../javascript/webcomponents/preview-link.js"></script>
+    <script src="../../javascript/webcomponents/intl-number.js"></script>
+    <script src="../../javascript/webcomponents/intl-datetime.js"></script>
   </body>
 </html>
