--- a/src/entry/app/index.html
+++ b/src/entry/app/index.html
@@ -96,7 +96,7 @@
   <script src="../../javascript/webcomponents/chart.js"></script>
   <script src="../../javascript/webcomponents/preview-lia.js"></script>
   <script src="../../javascript/webcomponents/preview-link.js"></script>
-  <script src="../../javascript/webcomponents/format.js"></script>
+  <script src="../../javascript/webcomponents/format.ts"></script>
   <script>
     if (process.env.NODE_ENV !== 'development') {
       if ('serviceWorker' in navigator) {
