--- a/src/entry/scorm1.2/index.html
+++ b/src/entry/scorm1.2/index.html
@@ -94,7 +94,7 @@
   <script src="../../javascript/webcomponents/chart.js"></script>
   <script src="../../javascript/webcomponents/preview-lia.js"></script>
   <script src="../../javascript/webcomponents/preview-link.js"></script>
-  <script src="../../javascript/webcomponents/format.js"></script>
+  <script src="../../javascript/webcomponents/format.ts"></script>
 </body>
 
 </html>
