moved formula webcomponent to typescript

--- a/src/entry/scorm1.2/index.html
+++ b/src/entry/scorm1.2/index.html
@@ -89,7 +89,7 @@
 
   <script src="./index.js"></script>
   <script src="../../javascript/webcomponents/editor.js"></script>
-  <script src="../../javascript/webcomponents/formula.js"></script>
+  <script src="../../javascript/webcomponents/formula.ts"></script>
   <script src="../../javascript/webcomponents/oembed.js"></script>
   <script src="../../javascript/webcomponents/chart.js"></script>
   <script src="../../javascript/webcomponents/preview-lia.js"></script>
