--- a/src/entry/base/index.html
+++ b/src/entry/base/index.html
@@ -68,7 +68,7 @@
   <script src="../../javascript/webcomponents/editor.js"></script>
   <script src="../../javascript/webcomponents/formula.ts"></script>
   <script src="../../javascript/webcomponents/oembed.js"></script>
-  <script src="../../javascript/webcomponents/chart.js"></script>
+  <script src="../../javascript/webcomponents/chart.ts"></script>
   <script src="../../javascript/webcomponents/preview-lia.js"></script>
   <script src="../../javascript/webcomponents/preview-link.js"></script>
   <script src="../../javascript/webcomponents/format.ts"></script>
