--- a/src/entry/app/index.html
+++ b/src/entry/app/index.html
@@ -92,7 +92,7 @@
   <script src="./index.js"></script>
   <script src="../../javascript/webcomponents/editor.js"></script>
   <script src="../../javascript/webcomponents/formula.ts"></script>
-  <script src="../../javascript/webcomponents/oembed.js"></script>
+  <script src="../../javascript/webcomponents/oembed.ts"></script>
   <script src="../../javascript/webcomponents/chart.ts"></script>
   <script src="../../javascript/webcomponents/preview-lia.js"></script>
   <script src="../../javascript/webcomponents/preview-link.js"></script>
