moved lia-editor to typescript

--- a/src/entry/scorm1.2/index.html
+++ b/src/entry/scorm1.2/index.html
@@ -88,7 +88,7 @@
   </div>
 
   <script src="./index.js"></script>
-  <script src="../../javascript/webcomponents/editor.js"></script>
+  <script src="../../javascript/webcomponents/editor.ts"></script>
   <script src="../../javascript/webcomponents/formula.ts"></script>
   <script src="../../javascript/webcomponents/oembed.ts"></script>
   <script src="../../javascript/webcomponents/chart.ts"></script>
