--- a/src/entry/base/index.html
+++ b/src/entry/base/index.html
@@ -65,7 +65,7 @@
 
 <body>
   <script src="./index.js"></script>
-  <script src="../../javascript/webcomponents/editor.js"></script>
+  <script src="../../javascript/webcomponents/editor.ts"></script>
   <script src="../../javascript/webcomponents/formula.ts"></script>
   <script src="../../javascript/webcomponents/oembed.ts"></script>
   <script src="../../javascript/webcomponents/chart.ts"></script>
