--- a/src/entry/scorm1.2/index.html
+++ b/src/entry/scorm1.2/index.html
@@ -92,7 +92,7 @@
   <script src="../../javascript/webcomponents/formula.ts"></script>
   <script src="../../javascript/webcomponents/oembed.ts"></script>
   <script src="../../javascript/webcomponents/chart.ts"></script>
-  <script src="../../javascript/webcomponents/preview-lia.js"></script>
+  <script src="../../javascript/webcomponents/preview-lia.ts"></script>
   <script src="../../javascript/webcomponents/preview-link.js"></script>
   <script src="../../javascript/webcomponents/format.ts"></script>
 </body>
