moved entry base/index to ts

--- a/src/entry/base/index.html
+++ b/src/entry/base/index.html
@@ -64,7 +64,7 @@
 </head>
 
 <body>
-  <script src="./index.js"></script>
+  <script src="./index.ts"></script>
   <script src="../../javascript/webcomponents/editor.ts"></script>
   <script src="../../javascript/webcomponents/formula.ts"></script>
   <script src="../../javascript/webcomponents/oembed.ts"></script>
