--- a/src/entry/app/index.html
+++ b/src/entry/app/index.html
@@ -89,7 +89,7 @@
     </p>
   </div>
 
-  <script src="./index.js"></script>
+  <script src="./index.ts"></script>
   <script src="../../javascript/webcomponents/editor.ts"></script>
   <script src="../../javascript/webcomponents/formula.ts"></script>
   <script src="../../javascript/webcomponents/oembed.ts"></script>
