typescriptified web component review-lia.js

--- a/src/entry/base/index.html
+++ b/src/entry/base/index.html
@@ -70,7 +70,7 @@
   <script src="../../javascript/webcomponents/oembed.ts"></script>
   <script src="../../javascript/webcomponents/chart.ts"></script>
   <script src="../../javascript/webcomponents/preview-lia.ts"></script>
-  <script src="../../javascript/webcomponents/preview-link.js"></script>
+  <script src="../../javascript/webcomponents/preview-link.ts"></script>
   <script src="../../javascript/webcomponents/format.ts"></script>
 </body>
 
