fix: WebComponent uses now textContent
However textContent seems to work until <script> or <style> tags are
loaded. innerHTML cleans up everything and innerText did not work
remotely.

--- a/src/entry/webcomponent/index.html
+++ b/src/entry/webcomponent/index.html
@@ -9,11 +9,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <script src="./index.ts"></script>
 
+
+
 <body>
 
 <lia-script>
-
+<!--
+author: André Dietrich
+-->
 # Hallo Welt
+
+--{{1}}--
+This is a Test
+
+--{{2}}--
+This is a Test
 
 </lia-script>
 
