feat(WebComponent): Working <lia-script> tag

--- a/src/entry/webcomponent/index.html
+++ b/src/entry/webcomponent/index.html
@@ -7,25 +7,33 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
   <script src="./index.ts"></script>
-
-
 
 <body>
 
-<lia-script>
-<!--
+<lia-script><!--
+
 author: André Dietrich
+
+comment: ljasdlöfjasödlfjasdff öalsfdj aölsfdjaslöfdj aslöfdj aslödfj asölfdj aslöfdj 
+
 -->
 # Hallo Welt
 
 --{{1}}--
 This is a Test
 
---{{2}}--
+{{1}}
+This is a Test
+
+{{2}}
 This is a Test
 
 </lia-script>
+
+
+
 
 </body>
 
