--- a/src/entry/dev/index.html
+++ b/src/entry/dev/index.html
@@ -8,6 +8,28 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <script defer src="../app/index.ts"></script>
+  <script defer src="../../typescript/webcomponents/editor.ts"></script>
+  <script defer src="../../typescript/webcomponents/formula.ts"></script>
+  <script defer src="../../typescript/webcomponents/embed.ts"></script>
+  <script defer src="../../typescript/webcomponents/chart.ts"></script>
+  <script defer src="../../typescript/webcomponents/preview-lia.ts"></script>
+  <script defer src="../../typescript/webcomponents/preview-link.ts"></script>
+  <script defer src="../../typescript/webcomponents/format.ts"></script>
+  <script>
+    if (process.env.NODE_ENV !== 'development') {
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+          let sw = "./sw.js"
+          try {
+            navigator.serviceWorker.register(sw).then(console.log).catch(console.error);
+          } catch (e) {
+            console.warn("sw: ", e);
+          }
+        })
+      }
+    }
+  </script>
   <!--script src="https://code.responsivevoice.org/responsivevoice.js"></script-->
 
   <link rel="shortcut icon" sizes="192x192" href="../../assets/logo_192.png">
@@ -84,29 +106,6 @@
       Thanks.
     </p>
   </div>
-
-  <script src="../app/index.ts"></script>
-  <script src="../../typescript/webcomponents/editor.ts"></script>
-  <script src="../../typescript/webcomponents/formula.ts"></script>
-  <script src="../../typescript/webcomponents/embed.ts"></script>
-  <script src="../../typescript/webcomponents/chart.ts"></script>
-  <script src="../../typescript/webcomponents/preview-lia.ts"></script>
-  <script src="../../typescript/webcomponents/preview-link.ts"></script>
-  <script src="../../typescript/webcomponents/format.ts"></script>
-  <script>
-    if (process.env.NODE_ENV !== 'development') {
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', function() {
-          let sw = "./sw.js"
-          try {
-            navigator.serviceWorker.register(sw).then(console.log).catch(console.error);
-          } catch (e) {
-            console.warn("sw: ", e);
-          }
-        })
-      }
-    }
-  </script>
 </body>
 
 </html>
