--- a/src/entry/scorm1.2/index.html
+++ b/src/entry/scorm1.2/index.html
@@ -8,7 +8,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
+  <script defer src="./index.js"></script>
+  <script defer src="../../typescript/webcomponents/editor.ts"></script>
+  <script defer src="../../typescript/webcomponents/formula.ts"></script>
+  <script defer src="../../typescript/webcomponents/embed.ts"></script>
+  <script defer src="../../typescript/webcomponents/chart.ts"></script>
+  <script defer src="../../typescript/webcomponents/preview-lia.ts"></script>
+  <script defer src="../../typescript/webcomponents/preview-link.ts"></script>
+  <script defer src="../../typescript/webcomponents/format.ts"></script>
+  <script defer src="https://code.responsivevoice.org/responsivevoice.js"></script>
 
   <link rel="shortcut icon" sizes="192x192" href="../../assets/logo_192.png">
 
@@ -82,15 +90,7 @@
       Thanks.
     </p>
   </div>
-
-  <script src="./index.js"></script>
-  <script src="../../typescript/webcomponents/editor.ts"></script>
-  <script src="../../typescript/webcomponents/formula.ts"></script>
-  <script src="../../typescript/webcomponents/embed.ts"></script>
-  <script src="../../typescript/webcomponents/chart.ts"></script>
-  <script src="../../typescript/webcomponents/preview-lia.ts"></script>
-  <script src="../../typescript/webcomponents/preview-link.ts"></script>
-  <script src="../../typescript/webcomponents/format.ts"></script>
+  
 </body>
 
 </html>
