Improve: Adds default meta description

--- a/src/entry/app/index.html
+++ b/src/entry/app/index.html
@@ -45,6 +45,8 @@
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="theme-color" content="#000000">
 
+  <meta name="description" content="LiaScript is a service for running free and interactive online courses, build with its own Markup-language. So check out the following course ;-)">
+
   <link rel="manifest" href="./manifest.webmanifest">
 
   <!-- Favicons -->
