--- a/src/entry/base/index.html
+++ b/src/entry/base/index.html
@@ -30,6 +30,8 @@
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="theme-color" content="#000000">
 
+  <meta name="description" content="LiaScript is a service for running free and interactive online courses, build with its own Markup-language. So check out the following course ;-)">
+
   <!-- Favicons -->
   <link rel="apple-touch-icon" href="../../assets/logo.png">
   <link rel="icon" href="../../assets/logo.png" type="image/png">
