--- a/src/entry/dev/index.html
+++ b/src/entry/dev/index.html
@@ -44,6 +44,8 @@
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="theme-color" content="#000000">
 
+  <meta name="description" content="LiaScript is a service for running free and interactive online courses, build with its own Markup-language. So check out the following course ;-)">
+
   <link rel="manifest" href="../app/manifest.webmanifest">
 
   <!-- Favicons -->
