feat(Code): Add resizable terminal windows
The max-height is still set to 200px and the terminal will grow up to
this size. The user can now also resize the terminal manually, in this
case the max-height property will be overwritten and temporally the user
defined size will be stored until the next reload.

[Issue: #69]

--- a/src/entry/app/index.html
+++ b/src/entry/app/index.html
@@ -17,6 +17,7 @@
   <script defer src="../../typescript/webcomponents/preview-lia.ts"></script>
   <script defer src="../../typescript/webcomponents/preview-link.ts"></script>
   <script defer src="../../typescript/webcomponents/format.ts"></script>
+  <script defer src="../../typescript/webcomponents/terminal.ts"></script>
   <script>
     if (process.env.NODE_ENV !== 'development') {
       if ('serviceWorker' in navigator) {
