--- a/src/entry/base/index.html
+++ b/src/entry/base/index.html
@@ -16,6 +16,7 @@
   <script defer src="../../typescript/webcomponents/preview-lia.ts"></script>
   <script defer src="../../typescript/webcomponents/preview-link.ts"></script>
   <script defer src="../../typescript/webcomponents/format.ts"></script>
+  <script defer src="../../typescript/webcomponents/terminal.ts"></script>
   <!--script defer src="https://code.responsivevoice.org/responsivevoice.js"></script-->
 
   <link rel="shortcut icon" sizes="192x192" href="../../assets/logo_192.png">
