--- a/src/entry/base/index.html
+++ b/src/entry/base/index.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <script defer src="./index.ts"></script>
+  <script defer type="module" src="./index.ts"></script>
   <script defer src="../../typescript/webcomponents/editor.ts"></script>
   <script defer src="../../typescript/webcomponents/formula.ts"></script>
   <script defer src="../../typescript/webcomponents/embed/index.ts"></script>
