--- a/src/entry/dev/index.html
+++ b/src/entry/dev/index.html
@@ -8,15 +8,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <script defer src="../app/index.ts"></script>
-  <script defer src="../../typescript/webcomponents/editor.ts"></script>
-  <script defer src="../../typescript/webcomponents/formula.ts"></script>
-  <script defer src="../../typescript/webcomponents/embed/index.ts"></script>
-  <script defer src="../../typescript/webcomponents/chart.ts"></script>
-  <script defer src="../../typescript/webcomponents/preview-lia.ts"></script>
-  <script defer src="../../typescript/webcomponents/preview-link.ts"></script>
-  <script defer src="../../typescript/webcomponents/format.ts"></script>
-  <script defer src="../../typescript/webcomponents/terminal.ts"></script>
+  <script defer type="module" src="../app/index.ts"></script>
+  <script defer type="module" src="../../typescript/webcomponents/editor.ts"></script>
+  <script defer type="module" src="../../typescript/webcomponents/formula.ts"></script>
+  <script defer type="module" src="../../typescript/webcomponents/embed/index.ts"></script>
+  <script defer type="module" src="../../typescript/webcomponents/chart.ts"></script>
+  <script defer type="module" src="../../typescript/webcomponents/preview-lia.ts"></script>
+  <script defer type="module" src="../../typescript/webcomponents/preview-link.ts"></script>
+  <script defer type="module" src="../../typescript/webcomponents/format.ts"></script>
+  <script defer type="module" src="../../typescript/webcomponents/terminal.ts"></script>
   <script>
     if (process.env.NODE_ENV !== 'development') {
       if ('serviceWorker' in navigator) {
