--- a/src/entry/base/index.html
+++ b/src/entry/base/index.html
@@ -9,15 +9,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <script defer type="module" src="./index.ts"></script>
-  <script defer src="../../typescript/webcomponents/editor.ts"></script>
-  <script defer src="../../typescript/webcomponents/formula.ts"></script>
-  <script defer src="../../typescript/webcomponents/embed/index.ts"></script>
-  <script defer src="../../typescript/webcomponents/chart.ts"></script>
-  <script defer src="../../typescript/webcomponents/preview-lia.ts"></script>
-  <script defer src="../../typescript/webcomponents/preview-link.ts"></script>
-  <script defer src="../../typescript/webcomponents/format.ts"></script>
-  <script defer src="../../typescript/webcomponents/terminal.ts"></script>
-  <!--script defer src="https://code.responsivevoice.org/responsivevoice.js"></script-->
+  <script defer type="module" src="../../typescript/webcomponents/editor.ts"></script>
+  <script defer type="module" src="../../typescript/webcomponents/formula.ts"></script>
+  <script defer type="module" src="../../typescript/webcomponents/embed/index.ts"></script>
+  <script defer type="module" src="../../typescript/webcomponents/chart.ts"></script>
+  <script defer type="module" src="../../typescript/webcomponents/preview-lia.ts"></script>
+  <script defer type="module" src="../../typescript/webcomponents/preview-link.ts"></script>
+  <script defer type="module" src="../../typescript/webcomponents/format.ts"></script>
+  <script defer type="module" src="../../typescript/webcomponents/terminal.ts"></script>
 
   <link rel="shortcut icon" sizes="192x192" href="../../assets/logo_192.png">
 
