--- a/src/entry/app/index.html
+++ b/src/entry/app/index.html
@@ -19,7 +19,7 @@
   <script defer type="module" src="../../typescript/webcomponents/format.ts"></script>
   <script defer type="module" src="../../typescript/webcomponents/terminal.ts"></script>
   <script>
-    if (process.env.NODE_ENV !== 'development') {
+    //if (process.env.NODE_ENV !== 'development') {
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
           let sw = "./sw.js"
@@ -30,7 +30,7 @@
           }
         })
       }
-    }
+    //}
   </script>
   <script defer src="https://code.responsivevoice.org/responsivevoice.js"></script>
 
