--- a/src/entry/dev/index.html
+++ b/src/entry/dev/index.html
@@ -18,6 +18,8 @@
   <script defer type="module" src="../../typescript/webcomponents/format.ts"></script>
   <script defer type="module" src="../../typescript/webcomponents/terminal.ts"></script>
 
+  <script  src="https://cdn.pubnub.com/sdk/javascript/pubnub.4.21.6.min.js">    </script>
+
   <script>
     if (process.env.NODE_ENV !== 'development') {
       if ('serviceWorker' in navigator) {
