removed responsivevoice from dev

--- a/src/entry/dev/index.html
+++ b/src/entry/dev/index.html
@@ -32,7 +32,7 @@
       }
     }
   </script>
-  <script src="https://code.responsivevoice.org/responsivevoice.js?key=blVZszUw"></script>
+  <!--script src="https://code.responsivevoice.org/responsivevoice.js"></script-->
 
   <link rel="shortcut icon" sizes="192x192" href="../../assets/logo_192.png">
 
