chore: Clean & beautify all index.html files

--- a/src/entry/scorm1.2/index.html
+++ b/src/entry/scorm1.2/index.html
@@ -31,7 +31,8 @@
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="theme-color" content="#000000">
 
-  <meta name="description" content="LiaScript is a service for running free and interactive online courses, build with its own Markup-language. So check out the following course ;-)">
+  <meta name="description"
+    content="LiaScript is a service for running free and interactive online courses, build with its own Markup-language. So check out the following course ;-)">
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" href="../../assets/logo.png">
@@ -87,13 +88,14 @@
     </p>
     <ol>
       <li>Use Firefox browser. Here is the <a href="http://www.mozilla.org/en-US/firefox/new/">download link.</a></li>
-      <li>Use Google Chrome browser. Here is the <a href="https://support.google.com/chrome/answer/95346?hl=en">download link.</a></li>
+      <li>Use Google Chrome browser. Here is the <a href="https://support.google.com/chrome/answer/95346?hl=en">download
+          link.</a></li>
     </ol>
     <p>
       Thanks.
     </p>
   </div>
-  
+
 </body>
 
 </html>
