--- a/src/entry/dev/index.html
+++ b/src/entry/dev/index.html
@@ -18,7 +18,7 @@
   <script defer type="module" src="../../typescript/webcomponents/format.ts"></script>
   <script defer type="module" src="../../typescript/webcomponents/terminal.ts"></script>
 
-  <script>
+  <!--script>
     if (process.env.NODE_ENV !== 'development') {
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
@@ -31,7 +31,7 @@
         })
       }
     }
-  </script>
+  </script-->
   <!--script src="https://code.responsivevoice.org/responsivevoice.js"></script-->
 
   <link rel="shortcut icon" sizes="192x192" href="../../assets/logo_192.png">
