--- a/src/entry/scorm1.2/index.html
+++ b/src/entry/scorm1.2/index.html
@@ -8,6 +8,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <script src="../../../node_modules/@webcomponents/custom-elements/custom-elements.min.js"></script>
+
   <script defer type="module" src="../../typescript/webcomponents/preview-lia.ts"></script>
   <script defer type="module" src="../../typescript/webcomponents/embed/index.ts"></script>
   <script defer type="module" src="../../typescript/webcomponents/tooltip/index.ts"></script>
