simple loading of web-components

--- a/src/entry/webcomponent/index.html
+++ b/src/entry/webcomponent/index.html
@@ -8,11 +8,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
-  <script src="./index.ts"></script>
+  <script type="module" src="./index.ts"></script>
 
 <body>
 
-<lia-script><!--
+<lia-script>
+<!--
 
 author: André Dietrich
 
@@ -28,7 +29,14 @@ This is a Test
 This is a Test
 
 {{2}}
-This is a Test
+<em>This is a Test
+</em>
+
+
+<script>alert('bla')</script>
+
+
+# test
 
 </lia-script>
 
