--- a/src/entry/webcomponent/index.html
+++ b/src/entry/webcomponent/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<lia-script>
+<lia-script src="README.md" style="width: 100%; height:400px;">
 <!--
 
 author: André Dietrich
@@ -33,11 +33,37 @@ This is a Test
 </em>
 
 
-<script>alert('bla')</script>
+
 
 
 # test
 
+</lia-script>
+
+---
+
+<lia-script style="width: 100%; height:400px;"><!--
+  
+author: André Dietrich
+  
+comment: ljasdlöfjasödlfjasdff öalsfdj aölsfdjaslöfdj aslöfdj aslödfj asölfdj aslöfdj 
+  
+-->
+
+# Hallo Welt
+  
+--{{1}}--
+This is a Test
+
+{{1}}
+This is a Test
+
+{{2}}
+<em>This is a Test
+</em>
+  
+# test
+  
 </lia-script>
 
 
