--- a/src/entry/webcomponent/test/test.html
+++ b/src/entry/webcomponent/test/test.html
@@ -8,16 +8,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
-  <script type="module" src="./index.ts"></script>
+  <link rel="stylesheet" href="https://liascript.github.io/webcomponent/index.css">
+  <script type="module" src="https://liascript.github.io/webcomponent/index.js"></script>
 </head>
 <body>
 
------------------
+<h1>Some Information on LiaScript</h1>
 
 <lia-script embed="true" src="https://raw.githubusercontent.com/liaScript/docs/master/README.md" style="width: 100%; height:800px;">
 </lia-script>
 
-----------------
+
+<h1>A book on interactive Python</h1>
+
 
 <lia-script embed="true" src="https://raw.githubusercontent.com/LiaBooks/How-To-Code-in-Python-3/main/README.md#1" style="width: 100%; height:800px;">
 </lia-script>
