web: Improve url handling

--- a/src/entry/webcomponent/index.html
+++ b/src/entry/webcomponent/index.html
@@ -14,7 +14,7 @@
 
 -----------------
 
-<lia-script embed="true" src="https://raw.githubusercontent.com/liaScript/docs/master/README.md" style="width: 100%; height:800px;">
+<lia-script embed="true" src="README.md" style="width: 100%; height:800px;">
 </lia-script>
 
 ----------------
