--- a/src/entry/webcomponent/test/test.html
+++ b/src/entry/webcomponent/test/test.html
@@ -15,15 +15,15 @@
 
 <h1>Some Information on LiaScript</h1>
 
-<lia-script embed="true" src="https://raw.githubusercontent.com/liaScript/docs/master/README.md" style="width: 100%; height:800px;">
+<lia-script embed="true" src="README.m" style="width: 100%; height:800px;">
 </lia-script>
 
 
 <h1>A book on interactive Python</h1>
 
 
-<lia-script embed="true" src="https://raw.githubusercontent.com/LiaBooks/How-To-Code-in-Python-3/main/README.md#1" style="width: 100%; height:800px;">
-</lia-script>
+<!--lia-script embed="true" src="https://raw.githubusercontent.com/LiaBooks/How-To-Code-in-Python-3/main/README.md#1" style="width: 100%; height:800px;">
+</lia-script-->
 
 </body>
 
