Add working iframe support

--- a/src/entry/webcomponent/index.html
+++ b/src/entry/webcomponent/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Lia</title>
 
-<head>
-  <title>Lia</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
-  <script type="module" src="./index.ts"></script>
-</head>
-<body>
+    <script type="module" src="./index.ts"></script>
+  </head>
+  <body>
+    -----------------
 
------------------
+    <lia-script
+      embed="true"
+      src="https://raw.githubusercontent.com/liaScript/docs/master/README.md"
+      style="width: 100%; height: 800px"
+    >
+    </lia-script>
 
-<lia-script embed="true" src="README.md" style="width: 100%; height:800px;">
-</lia-script>
+    ----------------
 
-----------------
-
-<lia-script embed="true" src="https://raw.githubusercontent.com/LiaBooks/How-To-Code-in-Python-3/main/README.md#1" style="width: 100%; height:800px;">
-</lia-script>
-
-</body>
-
+    <!--lia-script embed="true" src="https://raw.githubusercontent.com/LiaBooks/How-To-Code-in-Python-3/main/README.md#1" style="width: 100%; height:800px;">
+</lia-script-->
+  </body>
 </html>
