courses are loaded from indexeddb

--- a/src/entry/webcomponent/index.html
+++ b/src/entry/webcomponent/index.html
@@ -24,7 +24,11 @@
 
     ----------------
 
-    <!--lia-script embed="true" src="https://raw.githubusercontent.com/LiaBooks/How-To-Code-in-Python-3/main/README.md#1" style="width: 100%; height:800px;">
-</lia-script-->
+    <lia-script
+      embed="true"
+      src="https://raw.githubusercontent.com/LiaBooks/How-To-Code-in-Python-3/main/README.md#1"
+      style="width: 100%; height: 800px"
+    >
+    </lia-script>
   </body>
 </html>
