--- a/src/entry/webcomponent/index.html
+++ b/src/entry/webcomponent/index.html
@@ -18,7 +18,13 @@
     <lia-script
       embed="true"
       src="https://raw.githubusercontent.com/liaScript/docs/master/README.md"
-      style="width: 100%; height: 800px"
+      style="
+        width: calc(100% - 20px);
+        height: 600px;
+        border-radius: 5px;
+        border: 3px solid #000;
+        margin: 10px;
+      "
     >
     </lia-script>
 
@@ -27,8 +33,16 @@
     <lia-script
       embed="true"
       src="https://raw.githubusercontent.com/LiaBooks/How-To-Code-in-Python-3/main/README.md#1"
-      style="width: 100%; height: 800px"
+      style="
+        width: calc(100% - 20px);
+        height: 600px;
+        border-radius: 5px;
+        border: 3px solid #000;
+        margin: 10px;
+      "
     >
     </lia-script>
+
+    damm
   </body>
 </html>
