fix: webcomponents test registry

--- a/src/entry/webcomponent/index.html
+++ b/src/entry/webcomponent/index.html
@@ -13,9 +13,32 @@
     <script type="module" src="./index.ts"></script>
   </head>
   <body>
+    <lia-script
+      embed="true"
+      style="
+        width: calc(100% - 20px);
+        height: 600px;
+        border-radius: 5px;
+        border: 3px solid #000;
+        margin: 10px;
+        display: none;
+      "
+    >
+# Hello World
+
+this is a test
+
+``` python
+print("Hello World")
+```
+
+__bold__ and _italic_ text
+
+    </lia-script>
+
     -----------------
 
-    <lia-script
+    <!--lia-script
       embed="true"
       src="https://raw.githubusercontent.com/liaScript/docs/master/README.md"
       style="
@@ -41,7 +64,7 @@
         margin: 10px;
       "
     >
-    </lia-script>
+    </lia-script-->
 
     damm
   </body>
