fix: TS errors with child-Iframes

--- a/src/entry/webcomponent/index.html
+++ b/src/entry/webcomponent/index.html
@@ -13,7 +13,7 @@
     <script type="module" src="./index.ts"></script>
   </head>
   <body>
-    <lia-script
+    <!--lia-script
       embed="true"
       style="
         width: calc(100% - 20px);
@@ -28,7 +28,7 @@
       <eval> @input </eval>
 
       __bold__ and _italic_ text
-    </lia-script>
+    </lia-script-->
 
     -----------------
 
