Add responsiveVoice key to webcomponent

--- a/src/entry/webcomponent/index.html
+++ b/src/entry/webcomponent/index.html
@@ -13,7 +13,7 @@
     <script type="module" src="./index.ts"></script>
   </head>
   <body>
-    <!--lia-script
+    <lia-script
       embed="true"
       style="
         width: calc(100% - 20px);
@@ -24,17 +24,34 @@
         display: none;
       "
     >
-      # Hello World this is a test ``` js alert("Hallo") ```
-      <eval> @input </eval>
+<!--
+version: 1.0.0
+author: André Dietrich
+-->
+# Hello World
 
-      __bold__ and _italic_ text
-    </lia-script-->
+this is a test
+
+``` js
+alert("Hallo")
+```
+<eval>@input</eval>
+
+__bold__ and
+
+## fuck
+
+## asdfasfd
+
+_italic_ text
+</lia-script>
 
     -----------------
 
     <lia-script
       embed="true"
       src="https://raw.githubusercontent.com/liaScript/docs/master/README.md"
+      responsiveVoiceKey="XXXXXXXXXXXXXXX"
       style="
         width: calc(100% - 20px);
         height: 600px;
