loading within liascript

--- a/src/entry/webcomponent/index.html
+++ b/src/entry/webcomponent/index.html
@@ -11,6 +11,10 @@
     />
 
     <script type="module" src="./index.ts"></script>
+
+    <script>
+      console.warn('XXXXXXXXXXXXX ääääääääääääääää')
+    </script>
   </head>
   <body>
     <lia-script
@@ -24,27 +28,15 @@
         display: none;
       "
     >
-<!--
+      <!--
 version: 1.0.0
 author: André Dietrich
 -->
-# Hello World
+      # Hello World this is a test ``` js alert("Hallo") ```
+      <eval>@input</eval>
 
-this is a test
-
-``` js
-alert("Hallo")
-```
-<eval>@input</eval>
-
-__bold__ and
-
-## fuck
-
-## asdfasfd
-
-_italic_ text
-</lia-script>
+      __bold__ and ## fuck ## asdfasfd _italic_ text
+    </lia-script>
 
     -----------------
 
