--- a/src/entry/dev/index.html
+++ b/src/entry/dev/index.html
@@ -1,26 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Lia</title>
 
-<head>
-  <title>Lia</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="../../../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
 
-  <script src="../../../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+    <script
+      defer
+      type="module"
+      src="../../typescript/webcomponents/preview-lia.ts"
+    ></script>
+    <script
+      defer
+      type="module"
+      src="../../typescript/webcomponents/embed/index.ts"
+    ></script>
+    <script
+      defer
+      type="module"
+      src="../../typescript/webcomponents/tooltip/index.ts"
+    ></script>
+    <script defer type="module" src="../app/index.ts"></script>
+    <script
+      defer
+      type="module"
+      src="../../typescript/webcomponents/editor.ts"
+    ></script>
+    <script
+      defer
+      type="module"
+      src="../../typescript/webcomponents/formula/index.ts"
+    ></script>
+    <script
+      defer
+      type="module"
+      src="../../typescript/webcomponents/chart.ts"
+    ></script>
+    <script
+      defer
+      type="module"
+      src="../../typescript/webcomponents/format.ts"
+    ></script>
+    <script
+      defer
+      type="module"
+      src="../../typescript/webcomponents/terminal.ts"
+    ></script>
 
-  <script defer type="module" src="../../typescript/webcomponents/preview-lia.ts"></script>
-  <script defer type="module" src="../../typescript/webcomponents/embed/index.ts"></script>
-  <script defer type="module" src="../../typescript/webcomponents/tooltip/index.ts"></script>
-  <script defer type="module" src="../app/index.ts"></script>
-  <script defer type="module" src="../../typescript/webcomponents/editor.ts"></script>
-  <script defer type="module" src="../../typescript/webcomponents/formula.ts"></script>
-  <script defer type="module" src="../../typescript/webcomponents/chart.ts"></script>
-  <script defer type="module" src="../../typescript/webcomponents/format.ts"></script>
-  <script defer type="module" src="../../typescript/webcomponents/terminal.ts"></script>
-
-  <!--script>
+    <!--script>
     if (process.env.NODE_ENV !== 'development') {
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
@@ -34,88 +68,97 @@
       }
     }
   </script-->
-  <!--script defer="true" src="https://code.responsivevoice.org/responsivevoice.js?key=blVZszUw"></script-->
+    <!--script defer="true" src="https://code.responsivevoice.org/responsivevoice.js?key=blVZszUw"></script-->
 
-  <link rel="shortcut icon" sizes="192x192" href="../../assets/logo_192.png">
+    <link
+      rel="shortcut icon"
+      sizes="192x192"
+      href="../../assets/logo_192.png"
+    />
 
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="Lia">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="LiaScript">
-  <meta name="msapplication-TileImage" content="../../assets/logo_192.png">
-  <meta name="msapplication-TileColor" content="#0071c5">
-  <meta name="msapplication-tap-highlight" content="no">
-  <meta name="theme-color" content="#000000">
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="Lia" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta name="apple-mobile-web-app-title" content="LiaScript" />
+    <meta name="msapplication-TileImage" content="../../assets/logo_192.png" />
+    <meta name="msapplication-TileColor" content="#0071c5" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="theme-color" content="#000000" />
 
-  <meta name="description"
-    content="LiaScript is a service for running free and interactive online courses, build with its own Markup-language. So check out the following course ;-)">
+    <meta
+      name="description"
+      content="LiaScript is a service for running free and interactive online courses, build with its own Markup-language. So check out the following course ;-)"
+    />
 
-  <link rel="manifest" href="../app/manifest.webmanifest">
+    <link rel="manifest" href="../app/manifest.webmanifest" />
 
-  <!-- Favicons -->
-  <link rel="apple-touch-icon" href="../../assets/logo.png">
-  <link rel="icon" href="../../assets/logo.png" type="image/png">
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" href="../../assets/logo.png" />
+    <link rel="icon" href="../../assets/logo.png" type="image/png" />
 
-  <style>
-    .lds-dual-ring {
-      display: inline-block;
-      width: 150px;
-      height: 150px;
-    }
-
-    .lds-dual-ring:after {
-      content: " ";
-      display: block;
-      width: 128px;
-      height: 128px;
-      margin: 1px;
-      border-radius: 50%;
-      border: 5px solid #fff;
-      border-color: #000 transparent #000 transparent;
-      animation: lds-dual-ring 1.2s linear infinite;
-    }
-
-    @keyframes lds-dual-ring {
-      0% {
-        transform: rotate(0deg);
+    <style>
+      .lds-dual-ring {
+        display: inline-block;
+        width: 150px;
+        height: 150px;
       }
 
-      100% {
-        transform: rotate(360deg);
+      .lds-dual-ring:after {
+        content: ' ';
+        display: block;
+        width: 128px;
+        height: 128px;
+        margin: 1px;
+        border-radius: 50%;
+        border: 5px solid #fff;
+        border-color: #000 transparent #000 transparent;
+        animation: lds-dual-ring 1.2s linear infinite;
       }
-    }
-  </style>
 
-  <link rel="stylesheet" href="../../scss/main.scss">
-</head>
+      @keyframes lds-dual-ring {
+        0% {
+          transform: rotate(0deg);
+        }
 
-<body>
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
 
-  <noscript>
-    This page requires JavaScript to be enabled!
-  </noscript>
+    <link rel="stylesheet" href="../../scss/main.scss" />
+  </head>
 
-  <div id="IE-message" hidden="true">
-    <h1>LiaScript - Problem</h1>
-    <p>
-      Hello! Welcome to LiaScript. This site is not fully supported in
-      Internet Explorer 11 (and earlier) versions.
-    </p>
-    <p>
-      As an alternative, you can use either of the options below to browse the
-      site:
-    </p>
-    <ol>
-      <li>Use Firefox browser. Here is the <a href="http://www.mozilla.org/en-US/firefox/new/">download link.</a></li>
-      <li>Use Google Chrome browser. Here is the <a href="https://support.google.com/chrome/answer/95346?hl=en">download
-          link.</a></li>
-    </ol>
-    <p>
-      Thanks.
-    </p>
-  </div>
+  <body>
+    <noscript> This page requires JavaScript to be enabled! </noscript>
 
-</body>
-
+    <div id="IE-message" hidden="true">
+      <h1>LiaScript - Problem</h1>
+      <p>
+        Hello! Welcome to LiaScript. This site is not fully supported in
+        Internet Explorer 11 (and earlier) versions.
+      </p>
+      <p>
+        As an alternative, you can use either of the options below to browse the
+        site:
+      </p>
+      <ol>
+        <li>
+          Use Firefox browser. Here is the
+          <a href="http://www.mozilla.org/en-US/firefox/new/">download link.</a>
+        </li>
+        <li>
+          Use Google Chrome browser. Here is the
+          <a href="https://support.google.com/chrome/answer/95346?hl=en"
+            >download link.</a
+          >
+        </li>
+      </ol>
+      <p>Thanks.</p>
+    </div>
+  </body>
 </html>
