fix: katex css loading

--- a/src/entry/app/index.html
+++ b/src/entry/app/index.html
@@ -137,6 +137,11 @@
       media="none"
       onload="if(media!='all')media='all'"
     />
+
+    <link
+      rel="stylesheet"
+      href="../../../node_modules/katex/dist/katex.min.css"
+    />
   </head>
 
   <body>
