--- a/src/entry/xapi/index.html
+++ b/src/entry/xapi/index.html
@@ -116,6 +116,11 @@
       }
     </style>
     <link rel="stylesheet" href="../../scss/main.scss" />
+
+    <link
+      rel="stylesheet"
+      href="../../../node_modules/katex/dist/katex.min.css"
+    />
   </head>
   <body>
     <noscript> This page requires JavaScript to be enabled! </noscript>
