--- a/src/entry/dev/index.html
+++ b/src/entry/dev/index.html
@@ -131,6 +131,11 @@
     </style>
 
     <link rel="stylesheet" href="../../scss/main.scss" />
+
+    <link
+      rel="stylesheet"
+      href="../../../node_modules/katex/dist/katex.min.css"
+    />
   </head>
 
   <body>
