--- a/src/entry/indexeddb/index.html
+++ b/src/entry/indexeddb/index.html
@@ -135,6 +135,11 @@
       media="none"
       onload="if(media!='all')media='all'"
     />
+
+    <link
+      rel="stylesheet"
+      href="../../../node_modules/katex/dist/katex.min.css"
+    />
   </head>
 
   <body>
